--- a/modules/layout/api/helm_chart/templates/deployment.yaml
+++ b/modules/layout/api/helm_chart/templates/deployment.yaml
@@ -15,6 +15,12 @@ spec:
       labels:
         app: {{ .Values.service.name }}
     spec:
+      nodeSelector: 
+        node: "{{ .Values.nodeSelector.node }}"
+      tolerations:
+        - key: "node"
+          value: "{{ .Values.nodeSelector.node }}"
+          effect: "NoSchedule"
       initContainers:
       - name: wait-for-cache
         image: public.ecr.aws/c9r4x6y5/eyelevel/busybox:latest
