--- a/modules/layout/api/helm_chart/templates/deployment.yaml
+++ b/modules/layout/api/helm_chart/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
       - name: {{ .Values.service.name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: "{{ .Values.image.pull }}"
-        command: ["uvicorn", "document_api_server:app", "--host", "0.0.0.0", "--port", "8080"]
+        command: ["uvicorn", "document_api_server:app", "--host", "0.0.0.0", "--port", "8080", "--no-access-log"]
         ports:
         - containerPort: 8080
           protocol: TCP
