--- a/modules/layout/inference/helm_chart/templates/deployment.yaml
+++ b/modules/layout/inference/helm_chart/templates/deployment.yaml
@@ -43,7 +43,7 @@ spec:
           - /bin/sh
           - -c
           - |
-            export PYTHONPATH=/app && celery -A document.celery_process.app worker --loglevel=INFO --concurrency=1 --queues=layout_queue
+            export PYTHONPATH=/app && supervisord -c /app/supervisord.conf
         securityContext:
           runAsUser: {{ .Values.securityContext.runAsUser }}
         livenessProbe:
@@ -62,11 +62,22 @@ spec:
             - ps aux | grep 'document.celery_process.app' || exit 1
           initialDelaySeconds: 10
           periodSeconds: 30
+        resources:
+          limits:
+            nvidia.com/gpu: {{ .Values.replicas }}
+          requests:
+            nvidia.com/gpu: {{ .Values.replicas }}
         volumeMounts:
         - name: config-volume
           mountPath: /app/config.py
           subPath: config.py
+        - name: supervisord-volume
+          mountPath: /app/supervisord.conf
+          subPath: supervisord.conf
       volumes:
       - name: config-volume
         configMap:
           name: layout-config-py-map
+      - name: supervisord-volume
+        configMap:
+          name: layout-supervisord-16gb-conf-map
