--- a/env.tfvars.example
+++ b/env.tfvars.example
@@ -1,12 +1,13 @@
 # GLOBALS
 
 admin = {
-# generate using uuid.sh
-  api_key = "c3dcbb8d-23f5-40fe-8f61-359144a40391"
-# generate using uuid.sh
+  # generate using uuid.sh
+  api_key  = "c3dcbb8d-23f5-40fe-8f61-359144a40391"
+
+  # generate using uuid.sh
   username = "758a83e3-e1bc-40b5-aa37-a97ec0210eee"
 
-  email = "support@yourcompany.com"
+  email    = "support@yourcompany.com"
   password = "password"
 }
 
@@ -18,82 +19,22 @@ cluster = {
 }
 
 
-# CACHE
-
-cache = {
-  node       = "crc"
-  replicas   = 3
-  resources  = {
-    limits   = {
-      cpu    = "2"
-      memory = "16Gi"
-    }
-    requests = {
-      cpu    = "2"
-      memory = "16Gi"
-    }
-  }
-}
-
-
 # DATABASE
 
 db = {
+  db_name          = "eyelevel"
   db_password      = "password"
-  db_root_password = "rootpassword"
-  proxy            = {
-    replicas       = 3
-    resources      = {
-      limits       = {
-        cpu        = "600m"
-        memory     = "1Gi"
-      }
-      requests     = {
-        cpu        = "600m"
-        memory     = "1Gi"
-      }
-    }
-  }
-  node             = "crc"
-  pv_size          = "20Gi"
-  replicas         = 3
-  resources        = {
-    limits         = {
-      cpu          = "600m"
-      memory       = "1Gi"
-    }
-    requests       = {
-      cpu          = "600m"
-      memory       = "1Gi"
-    }
-  }
+  db_root_password = "password"
+  db_username      = "eyelevel"
 }
 
 
 # FILE
 
 file = {
-  access_key          = "minio"
-  access_secret       = "minio123"
-  node                = "crc"
-  operator            = {
-    replicas          = 2
-  }
-  pool_size           = "1Ti"
-  pool_servers        = 4
-  pool_server_volumes = 4
-  pv_path             = "/Users/USER/mnt/minio"
-  resources           = {
-    limits            = {
-      cpu             = "4"
-      memory          = "8Gi"
-    }
-    requests          = {
-      cpu             = "2"
-      memory          = "4Gi"
-    }
-  }
-  ssl                 = false
+  password      = "minio123"
+  upload_bucket = "eyelevel"
+  username      = "minio"
 }
 
 
@@ -103,58 +44,30 @@ groundx = {
   load_balancer = {
     port        = 80
   }
-  node = "crc"
 }
 
 
-layout_ocr = {
-  credentials = "gcv_credentials.json"
-  project     = ""
-  type        = "google"
+# LAYOUT
+
+layout = {
+  ocr = {
+    # required for google, otherwise ignored
+    credentials = "gcv_credentials.json"
+
+    # required for google, otherwise ignored
+    project     = ""
+
+    # valid values: google, tesseract
+    type        = "google"
+  }
 }
 
 
 # SEARCH
 
 search = {
-  node          = "crc"
+  index         = "prod-1"
   password      = "R0otb_*t!kazs"
-  pv_size       = "1Gi"
-  replicas      = 3
-  resources     = {
-    requests    = {
-      cpu       = "1"
-      memory    = "512Mi"
-    }
-  }
   root_password = "R0otb_*t!kazs"
-}
-
-
-# STREAM
-
-stream = {
-  node       = "crc"
-  operator   = {
-    replicas = 3
-  }
-  partitions = 3
-  resources  = {
-    limits   = {
-      cpu    = "4"
-      memory = "8Gi"
-    }
-    requests = {
-      cpu    = "2"
-      memory = "4Gi"
-    }
-  }
-  service    = {
-    replicas = 3
-    storage  = "20Gi"
-  }
-  zookeeper  = {
-    replicas = 3
-    storage  = "10Gi"
-  }
+  user          = "eyelevel"
 }
