Pushing updates from convo with cygnus

--- a/env.tfvars.example
+++ b/env.tfvars.example
@@ -14,7 +14,7 @@ admin = {
 cluster = {
   internet_access  = true
   kube_config_path = "~/.kube/config"
-  role             = "developer"
+  role             = "admin"
   type             = "openshift"
 }
 
