--- a/modules/layout/ocr/helm_chart/templates/deployment.yaml
+++ b/modules/layout/ocr/helm_chart/templates/deployment.yaml
@@ -34,12 +34,17 @@ spec:
       - name: {{ .Values.service.name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: "{{ .Values.image.pull }}"
+        env:
+          - name: POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
         workingDir: /app
         command:
           - /bin/sh
           - -c
           - |
-            export PYTHONPATH=/app && celery -A document.celery_process.app worker --loglevel=INFO --concurrency=1 --queues=ocr_queue
+            export PYTHONPATH=/app && celery -A document.celery_process.app worker --loglevel=INFO --concurrency=1 --queues=ocr_queue -n ${POD_NAME}-w1
         securityContext:
           runAsUser: {{ .Values.securityContext.runAsUser }}
         livenessProbe:
