--- a/modules/ranker/inference/helm_chart/templates/deployment.yaml
+++ b/modules/ranker/inference/helm_chart/templates/deployment.yaml
@@ -45,7 +45,7 @@ spec:
           - /bin/sh
           - -c
           - |
-            export PYTHONPATH=/workspace && supervisord -c /workspace/supervisord.conf
+            export PYTHONPATH=/workspace && python /workspace/init-ranker.py && supervisord -c /workspace/supervisord.conf
         securityContext:
           runAsUser: {{ .Values.securityContext.runAsUser }}
         livenessProbe:
@@ -66,9 +66,13 @@ spec:
           periodSeconds: 30
         resources:
           limits:
-            nvidia.com/gpu: {{ .Values.replicas }}
+            cpu: "{{ .Values.resources.limits.cpu }}"
+            memory: "{{ .Values.resources.limits.memory }}"
+            nvidia.com/gpu: {{ .Values.resources.limits.gpu }}
           requests:
-            nvidia.com/gpu: {{ .Values.replicas }}
+            cpu: "{{ .Values.resources.requests.cpu }}"
+            memory: "{{ .Values.resources.requests.memory }}"
+            nvidia.com/gpu: {{ .Values.resources.requests.gpu }}
         volumeMounts:
         - name: config-volume
           mountPath: /workspace/config.py
