support for korean and summary improvements

--- a/env.tfvars.example
+++ b/env.tfvars.example
@@ -11,6 +11,10 @@ admin = {
   password = "password"
 }
 
+app = {
+  languages = ["en"]
+}
+
 cluster = {
   internet_access  = true
   kube_config_path = "~/.kube/config"
@@ -68,6 +72,10 @@ layout = {
 search = {
   index         = "prod-1"
   password      = "R0otb_*t!kazs"
+  plugins       = {
+    enabled     = false
+    installList = []
+  }
   root_password = "R0otb_*t!kazs"
   user          = "eyelevel"
 }
