--- a/modules/summary/api/helm_chart/templates/deployment.yaml
+++ b/modules/summary/api/helm_chart/templates/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: {{ .Values.service.name }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
       app: {{ .Values.service.name }}
@@ -30,7 +30,11 @@ spec:
       - name: {{ .Values.service.name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: "{{ .Values.image.pull }}"
-        command: ["uvicorn", "summary_server:app", "--host", "0.0.0.0", "--port", "8080", "--no-access-log"]
+        command:
+          - /bin/bash
+          - -c
+          - |
+            export PYTHONPATH=/app && gunicorn -c /app/gunicorn_conf.py --capture-output --enable-stdio-inheritance
         ports:
         - containerPort: 8080
           protocol: TCP
@@ -50,11 +54,24 @@ spec:
             port: 8080
           initialDelaySeconds: 10
           periodSeconds: 30
+        resources:
+          limits:
+            cpu: "{{ .Values.resources.limits.cpu }}"
+            memory: "{{ .Values.resources.limits.memory }}"
+          requests:
+            cpu: "{{ .Values.resources.requests.cpu }}"
+            memory: "{{ .Values.resources.requests.memory }}"
         volumeMounts:
         - name: config-volume
           mountPath: /app/config.py
           subPath: config.py
+        - name: gunicorn-conf-volume
+          mountPath: /app/gunicorn_conf.py
+          subPath: gunicorn_conf.py
       volumes:
       - name: config-volume
         configMap:
           name: summary-config-py-map
+      - name: gunicorn-conf-volume
+        configMap:
+          name: summary-gunicorn-conf-py-map
