AWS EKS + VPC setup

--- a/environment/aws/env.tfvars.example
+++ b/environment/aws/env.tfvars.example
@@ -1,11 +1,12 @@
+subnets = null
+
 environment              = {
   cluster_role_arns      = []
   environment            = "dev"
   region                 = "us-east-1"
   ssh_key_name           = "my-key.pem"
-  subnets                = ["",""]
+  subnets                = []
   vpc_id                 = ""
-  vpc_security_group_ids = []
 }
 
 cluster               = {
