moving PV definition to operator

--- a/environment/aws/env.tfvars.example
+++ b/environment/aws/env.tfvars.example
@@ -1,18 +1,19 @@
 subnets = null
 
-environment              = {
-  cluster_role_arns      = []
-  environment            = "dev"
-  region                 = "us-east-1"
-  ssh_key_name           = "my-key.pem"
-  subnets                = []
-  vpc_id                 = ""
+environment         = {
+  cluster_role_arns = []
+  region            = "us-east-1"
+  ssh_key_name      = "my-key.pem"
+  stage             = "dev"
+  subnets           = []
+  vpc_id            = ""
 }
 
-cluster               = {
-  internet_access     = true
-  kube_config_path    = "~/.kube/config"
-  name                = "eyelevel"
-  role                = "admin"
-  type                = "eks"
+cluster             = {
+  environment       = "aws"
+  internet_access   = true
+  kube_config_path  = "~/.kube/config"
+  name              = "eyelevel"
+  role              = "admin"
+  type              = "eks"
 }
