--- a/operator/env.tfvars.example
+++ b/operator/env.tfvars.example
@@ -19,6 +19,7 @@ app = {
 # CLUSTER
 
 cluster = {
+  environment      = "aws"
   internet_access  = true
   kube_config_path = "~/.kube/config"
   name             = "eyelevel"
