--- a/environment/aws/env.tfvars.example
+++ b/environment/aws/env.tfvars.example
@@ -3,17 +3,9 @@ subnets = null
 environment         = {
   cluster_role_arns = []
   region            = "us-east-1"
-  ssh_key_name      = "my-key.pem"
+  security_groups   = []
+  ssh_key_name      = ""
   stage             = "dev"
   subnets           = []
   vpc_id            = ""
-}
-
-cluster             = {
-  environment       = "aws"
-  internet_access   = true
-  kube_config_path  = "~/.kube/config"
-  name              = "eyelevel"
-  role              = "admin"
-  type              = "eks"
 }
