--- a/operator/env.tfvars.example
+++ b/operator/env.tfvars.example
@@ -11,22 +11,6 @@ admin = {
   password = "password"
 }
 
-app = {
-  languages = ["en"]
-}
-
-
-# CLUSTER
-
-cluster = {
-  environment      = "aws"
-  internet_access  = true
-  kube_config_path = "~/.kube/config"
-  name             = "eyelevel"
-  role             = "admin"
-  type             = "eks"
-}
-
 
 # DATABASE
 
@@ -47,27 +31,18 @@ file = {
 }
 
 
-# GROUNDX
-
-groundx = {
-  load_balancer = {
-    port        = 80
-  }
-}
-
-
 # LAYOUT
 
 layout = {
   ocr = {
     # required for google, otherwise ignored
-    credentials = "gcv_credentials.json"
+    credentials = ""
 
     # required for google, otherwise ignored
     project     = ""
 
     # valid values: google, tesseract
-    type        = "google"
+    type        = "tesseract"
   }
 }
 
