--- a/modules/kafka/helm_chart/templates/deployment.yaml
+++ b/modules/kafka/helm_chart/templates/deployment.yaml
@@ -6,19 +6,7 @@ metadata:
   name: "{{ .Release.Name }}-cluster"
   namespace: {{ .Release.Namespace }}
 spec:
-  nodeSelector:
-    node: "{{ .Values.nodeSelector.node }}"
-  tolerations:
-    - key: "node"
-      value: "{{ .Values.nodeSelector.node }}"
-      effect: "NoSchedule"
   kafka:
-    nodeSelector:
-      node: "{{ .Values.nodeSelector.node }}"
-    tolerations:
-      - key: "node"
-        value: "{{ .Values.nodeSelector.node }}"
-        effect: "NoSchedule"
     version: {{ .Values.service.version }}
     replicas: {{ .Values.service.replicas }}
     listeners:
@@ -39,40 +27,43 @@ spec:
       limits:
         memory: {{ .Values.resources.limits.memory }}
         cpu: {{ .Values.resources.limits.cpu }}
+    template:
+      pod:
+        affinity:
+          nodeAffinity:
+            requiredDuringSchedulingIgnoredDuringExecution:
+              nodeSelectorTerms:
+                - matchExpressions:
+                  - key: node
+                    operator: In
+                    values:
+                    - "{{ .Values.nodeSelector.node }}"
+        tolerations:
+          - key: "node"
+            value: "{{ .Values.nodeSelector.node }}"
+            effect: "NoSchedule"
     storage:
       type: persistent-claim
       size: {{ .Values.service.storage.size }}
       deleteClaim: false
   zookeeper:
-    nodeSelector:
-      node: "{{ .Values.nodeSelector.node }}"
-    tolerations:
-      - key: "node"
-        value: "{{ .Values.nodeSelector.node }}"
-        effect: "NoSchedule"
     replicas: {{ .Values.zookeeper.replicas }}
+    template:
+      pod:
+        affinity:
+          nodeAffinity:
+            requiredDuringSchedulingIgnoredDuringExecution:
+              nodeSelectorTerms:
+                - matchExpressions:
+                  - key: node
+                    operator: In
+                    values:
+                    - "{{ .Values.nodeSelector.node }}"
+        tolerations:
+          - key: "node"
+            value: "{{ .Values.nodeSelector.node }}"
+            effect: "NoSchedule"
     storage:
       type: persistent-claim
       size: {{ .Values.zookeeper.storage.size }}
       deleteClaim: false
-  entityOperator:
-    nodeSelector:
-      node: "{{ .Values.nodeSelector.node }}"
-    tolerations:
-      - key: "node"
-        value: "{{ .Values.nodeSelector.node }}"
-        effect: "NoSchedule"
-    topicOperator:
-      nodeSelector:
-        node: "{{ .Values.nodeSelector.node }}"
-      tolerations:
-        - key: "node"
-          value: "{{ .Values.nodeSelector.node }}"
-          effect: "NoSchedule"
-    userOperator:
-      nodeSelector:
-        node: "{{ .Values.nodeSelector.node }}"
-      tolerations:
-        - key: "node"
-          value: "{{ .Values.nodeSelector.node }}"
-          effect: "NoSchedule"
