--- a/modules/layout/inference/helm_chart/templates/deployment.yaml
+++ b/modules/layout/inference/helm_chart/templates/deployment.yaml
@@ -23,69 +23,112 @@ spec:
           value: "{{ .Values.nodeSelector.node }}"
           effect: "NoSchedule"
       initContainers:
-      - name: wait-for-cache
-        image: public.ecr.aws/c9r4x6y5/eyelevel/busybox:latest
-        imagePullPolicy: "Always"
-        command: ['sh', '-c', "until nc -z {{ .Values.dependencies.cache }}; do echo waiting for cache; sleep 2; done"]
-      - name: wait-for-file-storage
-        image: public.ecr.aws/c9r4x6y5/eyelevel/busybox:latest
-        imagePullPolicy: "Always"
-        command: ['sh', '-c', "until nc -z {{ .Values.dependencies.file }}; do echo waiting for file storage; sleep 2; done"]
+        - name: wait-for-cache
+          image: public.ecr.aws/c9r4x6y5/eyelevel/busybox:latest
+          imagePullPolicy: "Always"
+          command: ['sh', '-c', "until nc -z {{ .Values.dependencies.cache }}; do echo waiting for cache; sleep 2; done"]
+        - name: wait-for-file-storage
+          image: public.ecr.aws/c9r4x6y5/eyelevel/busybox:latest
+          imagePullPolicy: "Always"
+          command: ['sh', '-c', "until nc -z {{ .Values.dependencies.file }}; do echo waiting for file storage; sleep 2; done"]
+        - name: create-symlink
+          image: public.ecr.aws/c9r4x6y5/eyelevel/busybox:latest
+          imagePullPolicy: "Always"
+          command: ["/bin/sh", "-c", "--"]
+          args: ["echo 'Running ldconfig_symlink.sh on this node'; /scripts/ldconfig_symlink.sh"]
+          securityContext:
+            privileged: true
+          resources:
+            requests:
+              cpu: 10m
+              memory: 50Mi
+          volumeMounts:
+            - name: {{ .Values.service.name }}
+              mountPath: /scripts/ldconfig_symlink.sh
+              subPath: ldconfig_symlink.sh
+            - name: host-sbin
+              mountPath: /host-sbin
+            - name: host-usr-sbin
+              mountPath: /host-usr-sbin
+            - name: host-bin
+              mountPath: /host-bin
+            - name: host-usr-bin
+              mountPath: /host-usr-bin
       containers:
-      - name: {{ .Values.service.name }}
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        imagePullPolicy: "{{ .Values.image.pull }}"
-        env:
-          - name: POD_NAME
-            valueFrom:
-              fieldRef:
-                fieldPath: metadata.name
-        workingDir: /app
-        command:
-          - /bin/sh
-          - -c
-          - |
-            export PYTHONPATH=/app && supervisord -c /app/supervisord.conf
-        securityContext:
-          runAsUser: {{ .Values.securityContext.runAsUser }}
-        livenessProbe:
-          exec:
-            command:
+        - name: {{ .Values.service.name }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: "{{ .Values.image.pull }}"
+          env:
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+          workingDir: /app
+          command:
             - /bin/sh
             - -c
-            - ps aux | grep 'document.celery_process.app' || exit 1
-          initialDelaySeconds: 30
-          periodSeconds: 30
-        readinessProbe:
-          exec:
-            command:
-            - /bin/sh
-            - -c
-            - ps aux | grep 'document.celery_process.app' || exit 1
-          initialDelaySeconds: 10
-          periodSeconds: 30
-        resources:
-          limits:
-            nvidia.com/gpu: {{ .Values.replicas }}
-          requests:
-            nvidia.com/gpu: {{ .Values.replicas }}
-        volumeMounts:
-        - name: config-models
-          mountPath: /app/config_models.py
-          subPath: config_models.py
-        - name: config-volume
-          mountPath: /app/config.py
-          subPath: config.py
-        - name: supervisord-volume
-          mountPath: /app/supervisord.conf
-          subPath: supervisord.conf
+            - |
+              export PYTHONPATH=/app && supervisord -c /app/supervisord.conf
+          securityContext:
+            runAsUser: {{ .Values.securityContext.runAsUser }}
+          livenessProbe:
+            exec:
+              command:
+                - /bin/sh
+                - -c
+                - ps aux | grep 'document.celery_process.app' || exit 1
+            initialDelaySeconds: 30
+            periodSeconds: 30
+          readinessProbe:
+            exec:
+              command:
+                - /bin/sh
+                - -c
+                - ps aux | grep 'document.celery_process.app' || exit 1
+            initialDelaySeconds: 10
+            periodSeconds: 30
+          resources:
+            limits:
+              nvidia.com/gpu: {{ .Values.replicas }}
+            requests:
+              nvidia.com/gpu: {{ .Values.replicas }}
+          volumeMounts:
+            - name: config-models
+              mountPath: /app/config_models.py
+              subPath: config_models.py
+            - name: config-volume
+              mountPath: /app/config.py
+              subPath: config.py
+            - name: supervisord-volume
+              mountPath: /app/supervisord.conf
+              subPath: supervisord.conf
       volumes:
-      - name: config-models
-        configMap:
-          name: config-models-map
-      - name: config-volume
-        configMap:
-          name: layout-config-py-map
-      - name: supervisord-volume
-        configMap:
-          name: layout-supervisord-16gb-conf-map
+        - name: config-models
+          configMap:
+            name: config-models-map
+        - name: config-volume
+          configMap:
+            name: layout-config-py-map
+        - name: supervisord-volume
+          configMap:
+            name: layout-supervisord-16gb-conf-map
+        - name: {{ .Values.service.name }}
+          configMap:
+            name: ldconfig-symlink-map
+            defaultMode: 0555
+        - name: host-sbin
+          hostPath:
+            path: /sbin
+            type: Directory
+        - name: host-usr-sbin
+          hostPath:
+            path: /usr/sbin
+            type: Directory
+        - name: host-bin
+          hostPath:
+            path: /bin
+            type: Directory
+        - name: host-usr-bin
+          hostPath:
+            path: /usr/bin
+            type: Directory
