--- a/environment/aws/env.tfvars.example
+++ b/environment/aws/env.tfvars.example
@@ -1,11 +1,19 @@
-subnets = null
+environment              = {
+  cluster_role_arns      = []
+  region                 = ""
+  security_groups        = []
+  ssh_key_name           = ""
+  stage                  = "prod"
+  subnets                = []
+  vpc_id                 = ""
+}
 
-environment         = {
-  cluster_role_arns = []
-  region            = "us-east-1"
-  security_groups   = []
-  ssh_key_name      = ""
-  stage             = "dev"
-  subnets           = []
-  vpc_id            = ""
+cluster               = {
+  environment         = "aws"
+  has_nvidia          = false
+  internet_access     = true
+  kube_config_path    = "~/.kube/config"
+  name                = "eyelevel"
+  role                = "admin"
+  type                = "eks"
 }
