added search field to cluster

--- a/environment/aws/env.tfvars.example
+++ b/environment/aws/env.tfvars.example
@@ -15,5 +15,6 @@ cluster               = {
   kube_config_path    = "~/.kube/config"
   name                = "eyelevel"
   role                = "admin"
+  search              = true
   type                = "eks"
 }
