fix for cluster name

--- a/environment/aws/env.tfvars.example
+++ b/environment/aws/env.tfvars.example
@@ -13,7 +13,7 @@ cluster               = {
   has_nvidia          = false
   internet_access     = true
   kube_config_path    = "~/.kube/config"
-  name                = "eyelevel"
+  prefix              = "eyelevel"
   role                = "admin"
   search              = true
   type                = "eks"
