--- a/modules/layout/ocr/helm_chart/templates/deployment.yaml
+++ b/modules/layout/ocr/helm_chart/templates/deployment.yaml
@@ -52,7 +52,7 @@ spec:
             command:
             - /bin/sh
             - -c
-            - ps aux | grep 'document.celery_process.app' || exit 1
+            - ps aux | grep 'document.celery_process.app' | grep -v grep || exit 1
           initialDelaySeconds: 30
           periodSeconds: 30
         readinessProbe:
@@ -60,7 +60,7 @@ spec:
             command:
             - /bin/sh
             - -c
-            - ps aux | grep 'document.celery_process.app' || exit 1
+            - ps aux | grep 'document.celery_process.app' | grep -v grep || exit 1
           initialDelaySeconds: 10
           periodSeconds: 30
         volumeMounts:
